--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.2",
+    "react-bootstrap-table": "^4.3.1",
+    "react-bootstrap-table-next": "^1.1.4",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.5",
     "react-sidebar": "^3.0.2"
